<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#FFFFE0"
        >


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/our_menu"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup_pizzaSize_id"
            android:layout_below="@+id/textView16"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small"
                android:id="@+id/radioButton_pizzaSmall_id"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:id="@+id/radioButton_pizzaMedium_id"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large"
                android:id="@+id/radioButton_pizzaLarge"
                android:checked="false" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayoutToppings"
            android:layout_width="375dp"
            android:layout_height="154dp"
            android:layout_below="@+id/textView9"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox_Onion"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:checked="false"
                android:text="@string/Onions" />

            <CheckBox
                android:id="@+id/checkBox_Tomato"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:checked="false"
                android:text="@string/Tomato" />

            <CheckBox
                android:id="@+id/checkBox_peppers"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:checked="false"
                android:text="@string/Peppers" />

            <CheckBox
                android:id="@+id/checkBox_Mushrooms"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:checked="false"
                android:text="@string/Mushrooms" />

            <CheckBox
                android:id="@+id/checkBox_Cheese"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:checked="false"
                android:text="@string/Cheese" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="228dp"
            android:layout_height="149dp"
            android:layout_below="@+id/textView9"
            android:layout_alignStart="@+id/button_Cancel_Pizza_id"
            android:layout_alignLeft="@+id/button_Cancel_Pizza_id"
            android:layout_marginStart="-4dp"
            android:layout_marginLeft="-4dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox_pineapple"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:checked="false"
                android:text="@string/pineapple" />

            <CheckBox
                android:id="@+id/checkBox_bulgarian"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:checked="false"
                android:text="@string/bulgarian" />

            <CheckBox
                android:id="@+id/checkBox_olives"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:checked="false"
                android:text="@string/olives" />

            <CheckBox
                android:id="@+id/checkBox_anchovies"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:checked="false"
                android:text="@string/anchovies" />

            <CheckBox
                android:id="@+id/checkBox_corn"
                android:layout_width="101dp"
                android:layout_height="35dp"
                android:checked="false"
                android:text="@string/corn" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/button_AddToCart_Pizza_id"
            android:layout_alignTop="@+id/button_Cancel_Pizza_id"
            android:layout_alignRight="@+id/radioGroup_pizzaSize_id"
            android:layout_alignEnd="@+id/radioGroup_pizzaSize_id" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/button_Cancel_Pizza_id"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/textView7"
            android:layout_alignEnd="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView_pizzaSizeSelected_id"
            android:layout_marginTop="-10dp"
            android:layout_below="@+id/radioGroup_pizzaSize_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView_pizzaPrice_id"
            android:layout_alignBottom="@+id/button_Cancel_Pizza_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="7dp"
            android:text="@string/chooseSize"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_pizzaSizeSelected_id"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="0dp"
            android:text="Choose toppings: "
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutToppings"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/specials"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/LinearLayoutSpecial"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_alignStart="@+id/button_Cancel_Pizza_id"
            android:layout_alignLeft="@+id/button_Cancel_Pizza_id"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/marinera_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/margarita_pizza"
                android:layout_marginTop="2dp"
                android:checked="false"
                android:text="@string/marinerades" />

            <CheckBox
                android:id="@+id/fungi_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/marinera_pizza"
                android:layout_marginTop="2dp"
                android:checked="false"
                android:text="@string/fungides" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutSpecial2"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_below="@id/LinearLayoutSpecial"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/vegi_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/vegides" />

            <CheckBox
                android:id="@+id/pepperoni_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:checked="false"
                android:text="@string/peperonides" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutSpecial3"
            android:layout_width="350dp"
            android:layout_height="74dp"
            android:layout_below="@id/LinearLayoutSpecial2"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">
        <CheckBox
            android:id="@+id/margarita_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:checked="false"
            android:text="@string/margaritades" />

            <CheckBox
                android:id="@+id/greek_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/greekdes" />

        </LinearLayout>





    </RelativeLayout>

</ScrollView>
